# GitHub-to-EAT

./: .env.dev.example  .env.example  .gitignore  CONTRACT.md  CONTRIBUTING.md  README.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
src/: cli.js  client.js  config.js  dedup.js  direct.js  engine.js  github.js  importer.js  mapping.js  mappings.js  mockserver.js  preflight.js  progress.js  version.js  wizard.js  writer.js
src/github_to_eat/: __init__.py  cli.py  client.py  config.py  importer.py  mockserver.py  preflight.py  progress.py
tests/: cli.test.js  client.test.js  config.test.js  dedup.test.js  direct.test.js  e2e.test.js  engine.test.js  github.test.js  helpers.js  import.test.js  mapping.test.js  mappings.test.js  mockserver.test.js  preflight.test.js  progress.test.js  smoke.test.js  test_cli.py  test_client.py  test_config.py  test_e2e.py  test_import.py  test_mockserver.py  test_preflight.py  test_progress.py  test_smoke.py  wizard.test.js  writer.test.js
