[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-to-eat"
version = "0.0.1"
description = "Onboard a public GitHub repository's issues into an East Agile Tracker project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "East Agile" }]
keywords = ["github", "east-agile-tracker", "eat", "issues", "import", "cli"]
dependencies = [
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/EastAgile/GitHub-to-EAT"
Repository = "https://github.com/EastAgile/GitHub-to-EAT"

[project.scripts]
github-to-eat = "github_to_eat.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/github_to_eat"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
